unpackaged/main/default/objects/AcctSeed__Ledger_Hierarchy__c/AcctSeed__Ledger_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Ledger Hierarchy</label>
    <nameField>
        <label>Ledger Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledger Hierarchy</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>