unpackaged/main/default/objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Generated_By__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Generated By</relationshipLabel>
    <relationshipName>Generated_By</relationshipName>
    <type>Lookup</type>
</CustomField>