unpackaged/main/default/objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Hierarchy_Type__c</fullName>
    <formula>IF(CONTAINS(TEXT(AcctSeed__Ledger__r.AcctSeed__Type__c), 'Transactional'), 'Transactional', 'Budget')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Type</label>
    <type>Text</type>
</CustomField>