unpackaged/main/default/objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Last_Period_Run__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Period_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Period Run</label>
    <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
    <relationshipLabel>Ledger Hierarchy</relationshipLabel>
    <relationshipName>Ledger_Hierarchy2</relationshipName>
    <type>Lookup</type>
</CustomField>