unpackaged/main/default/objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Consolidation ledger that will be the top level ledger for this hierarchy.</description>
    <inlineHelpText>The Consolidation ledger that will be the top level ledger for this hierarchy.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Ledger Hierarchy</relationshipLabel>
    <relationshipName>Ledger_Hierarchy</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>