unpackaged/main/default/objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Parent_Ledger_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Parent_Ledger_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ledger Hierarchy</label>
    <referenceTo>AcctSeed__Ledger_Hierarchy__c</referenceTo>
    <relationshipLabel>Ledger Hierarchy</relationshipLabel>
    <relationshipName>Ledger_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>